<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_nav_graph"
    app:startDestination="@id/homeDashboardFragment">

    <fragment
        android:id="@+id/homeDashboardFragment"
        android:name="com.transcil.rider.home.HomeDashboardFragment"
        android:label="@string/home_nav_home"
        tools:layout="@layout/fragment_home_dashboard" />

    <fragment
        android:id="@+id/nearbyHubsFragment"
        android:name="com.transcil.rider.home.NearbyHubsFragment"
        android:label="@string/nearby_hubs_title"
        tools:layout="@layout/fragment_nearby_hubs" />

    <fragment
        android:id="@+id/batterySwapFragment"
        android:name="com.transcil.rider.home.BatterySwapFragment"
        android:label="@string/battery_swap_title"
        tools:layout="@layout/fragment_battery_swap" />

    <fragment
        android:id="@+id/walletFragment"
        android:name="com.transcil.rider.home.WalletFragment"
        android:label="@string/wallet_title"
        tools:layout="@layout/fragment_wallet" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.transcil.rider.home.ProfileFragment"
        android:label="@string/profile_title"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_to_settings"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_profile_to_api_content"
            app:destination="@id/apiContentFragment" />
        <action
            android:id="@+id/action_profile_to_help"
            app:destination="@id/helpFragment" />
    </fragment>

    <fragment
        android:id="@+id/helpFragment"
        android:name="com.transcil.rider.home.HelpFragment"
        android:label="@string/help_native_title"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.transcil.rider.home.SettingsFragment"
        android:label="@string/profile_menu_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settings_to_api_content"
            app:destination="@id/apiContentFragment" />
        <action
            android:id="@+id/action_settings_to_help"
            app:destination="@id/helpFragment" />
        <action
            android:id="@+id/action_settings_to_bluetooth"
            app:destination="@id/bluetoothFragment" />
    </fragment>

    <fragment
        android:id="@+id/bluetoothFragment"
        android:name="com.transcil.rider.bluetooth.BluetoothFragment"
        android:label="@string/bluetooth_title"
        tools:layout="@layout/fragment_bluetooth" />

    <fragment
        android:id="@+id/apiContentFragment"
        android:name="com.transcil.rider.home.ApiContentFragment"
        android:label="@string/settings_help_center"
        tools:layout="@layout/fragment_api_content">
        <argument
            android:name="page"
            app:argType="string" />
    </fragment>
</navigation>
